--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
+    "csv": "^3.1.0",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
@@ -43,7 +44,7 @@
     "lodash": "^4.17.4",
     "lusca": "^1.5.2",
     "mongoose": "^4.13.11",
-    "nodemailer": "^4.4.1",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
@@ -53,32 +54,39 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
-    "@types/async": "^2.0.45",
+    "@types/async": "^2.0.49",
     "@types/bcrypt-nodejs": "^0.0.30",
-    "@types/bluebird": "^3.5.20",
-    "@types/body-parser": "^1.16.8",
-    "@types/compression": "^0.0.35",
-    "@types/connect-mongo": "^0.0.35",
-    "@types/dotenv": "^4.0.2",
+    "@types/bluebird": "^3.5.24",
+    "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.5",
+    "@types/compression": "^0.0.36",
+    "@types/connect-mongo": "^0.0.39",
+    "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.11.1",
-    "@types/express-session": "^1.15.8",
-    "@types/jest": "^22.1.3",
+    "@types/express": "^4.16.0",
+    "@types/express-flash": "^0.0.0",
+    "@types/express-session": "^1.15.11",
+    "@types/express-validator": "^3.0.0",
+    "@types/jest": "^23.3.2",
     "@types/jquery": "^3.2.17",
-    "@types/lodash": "^4.14.91",
+    "@types/lodash": "^4.14.116",
     "@types/lusca": "^1.5.0",
     "@types/mongodb": "^3.0.5",
-    "@types/mongoose": "^4.7.34",
+    "@types/mongoose": "^5.2.17",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
-    "@types/nodemailer": "^4.3.4",
-    "@types/passport": "^0.4.3",
+    "@types/node-sass": "^3.10.32",
+    "@types/nodemailer": "^4.6.5",
+    "@types/passport": "^0.4.6",
     "@types/passport-facebook": "^2.1.7",
-    "@types/passport-local": "^1.0.32",
-    "@types/request": "^2.47.0",
-    "@types/shelljs": "^0.7.8",
-    "@types/supertest": "^2.0.4",
-    "@types/winston": "^2.3.7",
+    "@types/passport-local": "^1.0.33",
+    "@types/pug": "^2.0.4",
+    "@types/request": "^2.47.1",
+    "@types/request-promise": "^4.1.42",
+    "@types/shelljs": "^0.8.0",
+    "@types/supertest": "^2.0.6",
+    "@types/typescript": "^2.0.0",
+    "@types/winston": "^2.4.4",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "jest": "^22.0.4",
