--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 
 # Get this from https://mlab.com/home after you've logged in and created a database
 MONGODB_URI=mongodb://<mlab_user>:<mlab_password>@<mlab_connection_url>
+USERNAME=email
+PASS=password
 
 # This is standard running mongodb locally
 MONGODB_URI_LOCAL=mongodb://localhost:27017
