--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.4",
     "lusca": "^1.5.2",
     "mongoose": "^4.13.11",
+    "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
